# spectral_wave_data

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTION.md  LICENSE.txt  PREREQUISITES.md  README.md  VERSION.txt  version_definition.py
docs/: requirements.txt
docs/source/: acknowledgements.rst  api_specification.rst  api_specification_C.rst  api_specification_Cpp.rst  api_specification_Fortran.rst  api_specification_Python.rst  api_specification_Python_methods.rst  application_swd_app_C.rst  application_swd_app_Cpp.rst  application_swd_app_fortran.rst  application_swd_app_python.rst  c_spectral_wave_data_h.rst  changelog.rst  changelog_inc.rst  citation.rst  conf.py  contacts.rst  cpp_SpectralWaveData_cpp.rst  cpp_SpectralWaveData_h.rst  fortran_swd_allocate.rst  fortran_swd_base.rst  fortran_swd_c.rst  fortran_swd_write_shape_1_or_2.rst  fortran_swd_write_shape_3.rst  fortran_swd_write_shape_4_or_5.rst  fortran_swd_write_shape_6.rst  index.rst  intro.rst  license.rst  programming.rst  programming_application_programs.rst  programming_wave_generators.rst  programming_wg_case_1.rst  programming_wg_case_2.rst  python_spectral_wave_data.rst  python_swd_c_interface.rst  rationales.rst  shape_1.rst  shape_2.rst  shape_3.rst  (+16 more)
docs/source/autodoc_mocks/spectral_wave_data/: .gitignore  swd_c_interface.py  swdlib.py
docs/source/autosummary_API/: .gitignore
docs/source/figures/: Figures.pptx  interpolation5th.py
docs/source/my_templates/: my_template_method.rst
icons/: svg_2_multiresolution_png_ico.py
make_libraries/: make_static_libs_linux_f_c_cpp.bash  make_static_libs_win64_f_c_cpp.bat
src/api/c/: README.txt  kind_values.f90  spectral_wave_data.c  spectral_wave_data.h
src/api/c/Cmake/: .gitignore  CMakeBuild_LibStatic_Linux.bash  CMakeBuild_LibStatic_Win64.bat  CMakeBuild_Program_Linux.bash  CMakeBuild_Program_Win64.bat  CMakeLists.txt  CMakeLists_LibStatic.txt  README.txt  cleanup.bash  make_zip_Linux_LibStatic.py  make_zip_win64_LibStatic.py  readme_alternative_compile_linux.txt
src/api/cpp/: README.txt  SpectralWaveData.cpp  SpectralWaveData.h
src/api/cpp/Cmake/: CMakeBuild_Program_Linux.bash  CMakeBuild_Program_Win64.bat  CMakeLists.txt  CMakeLists_LibStatic.txt  cleanup.bash  cleanup.bat  make_zip_Linux_LibStatic.py  make_zip_win64_LibStatic.py  readme_alternative_compile_linux.txt
src/api/fortran/: fft_fftw3.f90  kind_values.f90  open_swd_file.F90  spectral_interpolation.f90  spectral_wave_data.f90  spectral_wave_data_allocate.f90  spectral_wave_data_c.f90  spectral_wave_data_error.f90  spectral_wave_data_shape_1_impl_1.f90  spectral_wave_data_shape_2_impl_1.f90  spectral_wave_data_shape_3_impl_1.f90  spectral_wave_data_shape_4_impl_1.f90  spectral_wave_data_shape_4_impl_2.f90  spectral_wave_data_shape_5_impl_1.f90  spectral_wave_data_shape_6_impl_1.f90  swd_fft.f90  swd_fft_fftw3.f90  swd_version.f90  swd_write_shape_1_or_2.f90  swd_write_shape_3.f90  swd_write_shape_4_or_5.f90  swd_write_shape_6.f90
src/api/fortran/Cmake/: .gitignore  CMakeBuild_LibStatic_Linux.bash  CMakeBuild_Program_Linux.bash  CMakeBuild_Program_Win64.bat  CMakeLists.txt  CMakeLists_LibStatic.txt  cleanup.bash  core_files.cmake  make_zip_Linux_LibStatic.py  make_zip_win64_LibStatic.py
src/api/python/: BuildWheelsLinux.bash  README.txt
src/api/python/Cmake/: CMakeBuild_Intel4manylinux.bash  CMakeBuild_Linux.bash  CMakeBuild_Win64.bat  CMakeLists.txt  README.txt
src/api/python/distribution/: .gitignore  LICENSE.txt  README.txt  README_build_manylinux.txt  cleanup.bash  cleanup.bat  make_wheel_Linux.bash  make_wheel_win64.bat  readme_pypi.md  setup.py  zip4manylinux.py
src/api/python/spectral_wave_data/: ISO_Fortran_binding.py  __init__.py  spectral_wave_data.py  swd_c_interface.py
src/api/python/whl/: .gitignore
src/api_examples/: application_swd_api.c  application_swd_api.cpp  application_swd_api.f90  application_swd_api.py  application_swd_api_no_ptr.cpp  fft_example.c
tests/: README.txt
tests/fortran/temporal_interpolation/: test_spectral_interpolation_ipol_0.f90  test_spectral_interpolation_ipol_1.f90  test_spectral_interpolation_ipol_2.f90
tests/fortran/temporal_interpolation/Cmake/: .gitignore  CMakeBuild_Linux.bash  CMakeLists.txt  cleanup.bash  cleanup.bat
tests/python/: .gitignore  README.txt  install_requirements_tests.bat  requirements_tests.txt  run_all_tests.bash  run_all_tests.bat  run_failed_test.bash
tests/python/tests_fft/: run_tests.bash  tests_fft.py
tests/python/tests_fft/inputfiles/: shape1_impl1_nx32_ny1.swd  shape1_impl1_nx33_ny1.swd  shape1_impl1_nx34_ny1.swd  shape1_impl1_nx35_ny1.swd  shape2_impl1_nx32_ny1.swd  shape2_impl1_nx33_ny1.swd  shape2_impl1_nx34_ny1.swd  shape2_impl1_nx35_ny1.swd  shape4_impl1_nx32_ny33.swd  shape4_impl1_nx32_ny34.swd  shape4_impl1_nx32_ny35.swd  shape4_impl1_nx33_ny32.swd  shape4_impl1_nx33_ny34.swd  shape4_impl1_nx33_ny35.swd  shape4_impl1_nx34_ny32.swd  shape4_impl1_nx34_ny33.swd  shape4_impl1_nx34_ny35.swd  shape4_impl1_nx35_ny32.swd  shape4_impl1_nx35_ny33.swd  shape4_impl1_nx35_ny34.swd  shape4_impl2_nx32_ny32.swd  shape4_impl2_nx33_ny33.swd  shape4_impl2_nx34_ny34.swd  shape4_impl2_nx35_ny35.swd  shape5_impl1_nx32_ny32.swd  shape5_impl1_nx32_ny33.swd  shape5_impl1_nx32_ny34.swd  shape5_impl1_nx32_ny35.swd  shape5_impl1_nx33_ny32.swd  shape5_impl1_nx33_ny33.swd  (+11 more)
tests/python/tests_one-timesteps/: test_one-timestep.py
tests/python/tests_other/: print_destroy_at_end_of_program.py  test_close_swd.py  test_open_swd.py  test_with_statement.py
tests/python/tests_tools/: test_airy.py
tests/python/tests_using_sympy/: corsys.py  mytest.py  shape_1.py  shape_2.py  shape_3.py  shape_4.py  shape_5.py  shape_6.py  symbols.py  sympy_cache.py  test_shape1.py  test_shape1_update_time.py  test_shape2.py  test_shape2_update_time.py  test_shape3.py  test_shape3_update_time.py  test_shape4.py  test_shape4_impl1_update_time.py  test_shape4_impl2_update_time.py  test_shape5.py  test_shape5_impl1_update_time.py  test_shape6.py  tfun.py
tests/swds/: test_nx3.swd  test_nx3_ny4.swd
(+28 files in other folders)
